plugins {
    id 'com.android.library'
    id 'maven-publish'
}

android {
    namespace = 'm.co.rh.id.apoi_spreadsheet.ooxml'
    compileSdk 37

    defaultConfig {
        minSdk 26

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    packaging {
        exclude 'META-INF/DEPENDENCIES'
        resources {
            excludes.remove('META-INF/LICENSE.txt')
            excludes.remove('META-INF/NOTICE.txt')
            pickFirsts += 'META-INF/LICENSE-a-poi-spreadsheet.txt'
            pickFirsts += 'META-INF/NOTICE-a-poi-spreadsheet.txt'
        }
    }
    publishing {
        singleVariant('release') {
            withSourcesJar()
        }
    }
}

dependencies {
    implementation project(':base')
    implementation project(':poi')
    implementation 'org.apache.poi:poi-ooxml-full:5.5.1'

    implementation 'javax.xml.crypto:jsr105-api:1.0.1'
    implementation 'org.apache.santuario:xmlsec:3.0.6'
    // xmlbeans 5.x requires log4j-api classes at runtime (logging-only shim; no backend bundled, output stays silent)
    implementation 'org.apache.logging.log4j:log4j-api:2.24.3'

    // (Required) Writing and executing Unit Tests on the JUnit Platform
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'org.mockito:mockito-android:5.10.0'
    androidTestImplementation 'com.github.rzymek:opczip:1.2.0'
}

afterEvaluate {
    publishing {
        publications {
            // Creates a Maven publication called "release".
            release(MavenPublication) {
                // Applies the component for the release build variant.
                from components.release

                // You can then customize attributes of the publication as shown below.
                groupId = 'com.github.rh-id'
                artifactId = 'a-poi-spreadsheet-ooxml'
                version = '0.0.5'
                pom {
                    name = 'a-poi-spreadsheet-ooxml'
                    description = 'Apache POI spreadsheet support for Android - OOXML (.xlsx) support adapted from Apache POI ooxml module'
                    url = 'https://github.com/rh-id/a-poi-spreadsheet'
                    licenses {
                        license {
                            name = 'The Apache License, Version 2.0'
                            url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                            distribution = 'repo'
                        }
                    }
                    developers {
                        developer {
                            id = 'rh-id'
                            name = 'Ruby Hartono'
                        }
                    }
                    scm {
                        connection = 'scm:git:github.com/rh-id/a-poi-spreadsheet.git'
                        developerConnection = 'scm:git:ssh://github.com/rh-id/a-poi-spreadsheet.git'
                        url = 'https://github.com/rh-id/a-poi-spreadsheet/tree/master'
                    }
                }
            }
        }
    }
}